--- a/prueba.css
+++ b/prueba.css
@@ -142,6 +142,11 @@ body {
 
 .h1 {
     text-align: center;
+    margin-top: 30px;
+}
+
+.h11 {
+  text-align: center;
 }
 
 .h12 {
@@ -394,4 +399,15 @@ form button {
 
 form button:hover {
     background-color: rgb(19, 0, 128);
+}
+
+footer {
+  background-color:rgb(15, 5, 155) ;
+  color: white;
+  text-align: center;
+  padding: 10px 0;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  margin-top: -20px;
 }
