--- a/prueba.css
+++ b/prueba.css
@@ -142,7 +142,7 @@ body {
 
 .h1 {
     text-align: center;
-    margin-top: 30px;
+    margin-top: 50px;
 }
 
 .h11 {
@@ -153,6 +153,10 @@ body {
     text-align: center;
     top: -150px;
     margin-top: 100px;
+}
+
+.h111 {
+  text-align: center;
 }
 
 
